Fixed css for more spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,8 @@
     float: left;
     margin: auto;
 }
+
+input,
+button {
+    margin: 2px;
+}
